# massive-api

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  mise.ci.toml  mise.toml  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
src/eodhd_py/: __init__.py  base.py  client.py  utils.py
src/eodhd_py/api/: __init__.py  costs.py  dividends.py  earnings.py  eod_historical.py  exchange_symbol_list.py  exchanges.py  intraday_historical.py  ipos.py  splits.py  user.py
src/massive_api/: __init__.py  base.py  client.py  exceptions.py  params.py  utils.py
src/massive_api/api/: __init__.py  dividends.py  reference.py  splits.py
tests/: conftest.py  test_base_api.py  test_concurrency.py  test_eodhd_api.py  test_massive_api.py  test_pagination.py  test_param_validation.py  test_rate_limits.py  test_utils.py  test_validation.py
tests/api/: test_costs.py  test_dividends_api.py  test_earnings_api.py  test_eod_historical_api.py  test_exchange_symbol_list_api.py  test_exchanges_api.py  test_intraday_historical_api.py  test_ipos_api.py  test_reference_api.py  test_splits_api.py  test_user_api.py
